--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <div class="container">
                 <h2>Agende seu horário</h2>
                 <form action="" id="booking-form">
-                    <label for="name">Nome: </label> <input type="text" id="name" name="name" required>
-                    <label for="cel">Celular: </label> <input type="tel" name="cel" id="cel" required>
-                    <label for="email">Email: </label> <input type="email" id="email" name="email" required>
+                    <label for="name">Nome: </label> <input type="text" id="name" name="name" placeholder="Digite seu nome aqui...">
+                    <label for="cel">Celular: </label> <input type="tel" name="cel" id="cel" placeholder="62 xxxxx-xxxx" required>
+                    <label for="email">Email: </label> <input type="email" id="email" name="email" placeholder="seuemail@email.com" required>
                     <label for="service">Serviço: </label> <select name="service" id="service" required>
                         <option value="corte">Corte de Cabelo</option>
                         <option value="barba">Barba</option>
