--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Premium</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" media="all">
+    <link rel="stylesheet" href="css/media-query.css">
 </head>
 <body>
     <header>
@@ -28,7 +29,7 @@
         </section>
         <section id="services">
             <div class="container">
-                <h2>Nossos Serviços</h2>
+                <h2 class="services-list">Nossos Serviços</h2>
                 <div class="services-item">
                     <h3>Corte de Cabelo</h3>
                     <p>Descrição do serviço de corte de cabelo.</p>
@@ -60,6 +61,9 @@
                     <button type="submit" id="btnSubmit">Agendar</button>
                 </form>
             </div>
+        </section>
+        <section id="location">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d244582.22029360558!2d-49.469648125183944!3d-16.69702857478051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef6bd58d80867%3A0xef692bad20d2678e!2zR29pw6JuaWEsIEdP!5e0!3m2!1spt-BR!2sbr!4v1718661924164!5m2!1spt-BR!2sbr" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
         <section id="contact">
             <div class="container">
